--- a/index.html
+++ b/index.html
@@ -9,10 +9,90 @@
 	<link rel="stylesheet" type="text/css" media="all" href="css/styles.css">
 
 <body>
+	<!-- Start Wrapper -->
+	<div class="wrapper">
+		<!-- Gallery wrapper start -->
+		<div class="gallery_wrapper">
+			
+			<!-- The arrows -->
+			<span class="previous"></span>
+			<span class="next"></span>
+			<!-- Arrow End -->
+			<!-- Start Image Wrapper -->
+			<div class="image_wrapper">
+				<img class="slide" src="images/image-1.jpeg" alt="Image from Lorem Pixel">
+				<img class="slide" src="images/image-2.jpeg" alt="Image from Lorem Pixel">
+				<img class="slide" src="images/image-3.jpeg" alt="Image from Lorem Pixel">
+				<img class="slide" src="images/image-4.jpeg" alt="Image from Lorem Pixel">
+				<img class="slide" src="images/image-5.jpeg" alt="Image from Lorem Pixel">
+			</div>
+			<!-- End Image Wrapper -->
+		</div>
+		<!-- Gallery wrapper end -->
+
+		<!-- start pagination wrapper -->
+		<div class="pagination">
+			<ul>
+				<li class="thumb"></li>
+				<li class="thumb"></li>
+				<li class="thumb"></li>
+				<li class="thumb"></li>
+				<li class="thumb"></li>
+			</ul>
+		</div>
+		<!-- End Pagination wrapper -->
+
+
+	</div><!-- End wrapper -->
+
+
+
+
 
 <!-- Javascript -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
  <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
+ <script src="js/gallery.js"></script>
  <!-- End Javascript -->
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
